# sh-guard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  install.sh
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-release.yml  chocolatey.yml  ci.yml  docker.yml  homebrew.yml  npm-cli.yml  pypi.yml  release.yml  snap.yml
choco/: sh-guard.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
crates/sh-guard-cli/: Cargo.toml  README.md
crates/sh-guard-cli/src/: main.rs  setup.rs
crates/sh-guard-cli/tests/: test_cli.rs
crates/sh-guard-core/: Cargo.toml  README.md
crates/sh-guard-core/benches/: bench_classify.rs
crates/sh-guard-core/examples/: test_scores.rs
crates/sh-guard-core/src/: analyzer.rs  context.rs  custom_rules.rs  lib.rs  parser.rs  parser_fallback.rs  pipeline.rs  scorer.rs  types.rs
crates/sh-guard-core/src/rules/: commands.rs  gtfobins.rs  injection.rs  mod.rs  network.rs  paths.rs  zsh.rs
crates/sh-guard-core/tests/: test_analyzer.rs  test_context.rs  test_corpus.rs  test_edge_cases.rs  test_parser.rs  test_parser_fallback.rs  test_permutations.rs  test_pipeline.rs  test_properties.rs  test_rule_loader.rs  test_rules_commands.rs  test_rules_gtfobins.rs  test_rules_injection.rs  test_rules_network.rs  test_rules_paths.rs  test_rules_zsh.rs  test_scorer.rs  test_types.rs
crates/sh-guard-mcp/: Cargo.toml  README.md
crates/sh-guard-mcp/src/: main.rs
crates/sh-guard-mcp/tests/: test_mcp.rs
crates/sh-guard-napi/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js  types.d.ts
crates/sh-guard-napi/src/: lib.rs
crates/sh-guard-python/: Cargo.toml  README.md  pyproject.toml  test_sh_guard.py
crates/sh-guard-python/src/: lib.rs
homebrew/: sh-guard.rb
npm/sh-guard/: README.md  package.json
npm/sh-guard-cli-darwin-arm64/: README.md  package.json
npm/sh-guard-cli-darwin-x64/: README.md  package.json
npm/sh-guard-cli-linux-arm64/: README.md  package.json
npm/sh-guard-cli-linux-x64/: README.md  package.json
npm/sh-guard-cli-win32-x64/: README.md  package.json
scripts/: build-npm.sh
site/: index.html
snap/: snapcraft.yaml
tests/corpus/: caution.txt  critical.txt  danger.txt  evasion.txt  gtfobins.txt  injection.txt  pipelines.txt  safe.txt  zsh.txt
