[package]
name = "sh-guard-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for sh-guard: semantic shell command safety classifier"
license = "MIT"
repository = "https://github.com/aryanbhosale/sh-guard"

[[bin]]
name = "sh-guard"
path = "src/main.rs"

[dependencies]
sh-guard-core = { path = "../sh-guard-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
colored = "2"

[dev-dependencies]
serde_json = "1"
