[package]
name = "sh-guard-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for sh-guard: semantic shell command safety classifier"
license = "GPL-3.0-only"
repository = "https://github.com/aryanbhosale/sh-guard"

[[bin]]
name = "sh-guard"
path = "src/main.rs"

[dependencies]
sh-guard-core = { version = "0.1.0", path = "../sh-guard-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
colored = "3"

[dev-dependencies]
serde_json = "1"
