[package]
name = "sh-guard-core"
version = "0.1.0"
edition = "2021"
description = "Semantic shell command safety classifier"
license = "MIT"
repository = "https://github.com/aryanbhosale/sh-guard"

[dependencies]
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob-match = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench_classify"
harness = false
