[package]
name = "sh-guard-core"
version = "0.1.0"
edition = "2021"
description = "Semantic shell command safety classifier — AST-based risk scoring for AI coding agents in under 100 microseconds"
license = "GPL-3.0-only"
repository = "https://github.com/aryanbhosale/sh-guard"
readme = "README.md"
homepage = "https://github.com/aryanbhosale/sh-guard"
keywords = ["security", "shell", "bash", "safety", "ai-agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
glob-match = "0.2"
regex = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "bench_classify"
harness = false
