[package]
name = "sh-guard-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for sh-guard: semantic shell command safety classifier"
license = "GPL-3.0-only"
repository = "https://github.com/aryanbhosale/sh-guard"

[[bin]]
name = "sh-guard-mcp"
path = "src/main.rs"

[dependencies]
sh-guard-core = { version = "0.1.0", path = "../sh-guard-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
