[package]
name = "sh-guard-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js binding for sh-guard via napi-rs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
sh-guard-core = { version = "0.1.0", path = "../sh-guard-core" }
napi = { version = "3", features = ["default", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
