[package]
name = "sh-guard-napi"
version = "0.1.0"
edition = "2021"
description = "Node.js native bindings for sh-guard via napi-rs — semantic shell command safety classifier"
license = "GPL-3.0-only"
repository = "https://github.com/aryanbhosale/sh-guard"
homepage = "https://github.com/aryanbhosale/sh-guard"

[lib]
crate-type = ["cdylib"]

[dependencies]
sh-guard-core = { version = "0.1.0", path = "../sh-guard-core" }
napi = { version = "3", features = ["default", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
