[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sh-guard"
version = "0.1.0"
description = "Semantic shell command safety classifier"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
keywords = ["security", "shell", "bash", "safety", "classifier", "ai-agent"]

[tool.maturin]
features = ["pyo3/extension-module"]
